// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FighterList renders with empty items array 1`] = `
<Styled(SegmentGroup)>
  <PoseGroup
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  >
    <Component
      key="0"
    >
      <Styled(Fighter)
        key="0"
      />
    </Component>
    <Component
      key="1"
    >
      <Styled(Fighter)
        key="1"
      />
    </Component>
    <Component
      key="2"
    >
      <Styled(Fighter)
        key="2"
      />
    </Component>
  </PoseGroup>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with four items 1`] = `
<Styled(SegmentGroup)>
  <PoseGroup
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  >
    <Component
      key="0"
    >
      <Styled(Fighter)
        index={0}
        item={
          Object {
            "id": 0,
            "name": "Item: 0",
          }
        }
        key="0"
        lastIndex={3}
      />
    </Component>
    <Component
      key="1"
    >
      <Styled(Fighter)
        index={1}
        item={
          Object {
            "id": 1,
            "name": "Item: 1",
          }
        }
        key="1"
        lastIndex={3}
      />
    </Component>
    <Component
      key="2"
    >
      <Styled(Fighter)
        index={2}
        item={
          Object {
            "id": 2,
            "name": "Item: 2",
          }
        }
        key="2"
        lastIndex={3}
      />
    </Component>
    <Component
      key="3"
    >
      <Styled(Fighter)
        index={3}
        item={
          Object {
            "id": 3,
            "name": "Item: 3",
          }
        }
        key="3"
        lastIndex={3}
      />
    </Component>
  </PoseGroup>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with no props 1`] = `
<Styled(SegmentGroup)>
  <PoseGroup
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  >
    <Component
      key="0"
    >
      <Styled(Fighter)
        key="0"
      />
    </Component>
    <Component
      key="1"
    >
      <Styled(Fighter)
        key="1"
      />
    </Component>
    <Component
      key="2"
    >
      <Styled(Fighter)
        key="2"
      />
    </Component>
  </PoseGroup>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with one item 1`] = `
<Styled(SegmentGroup)>
  <PoseGroup
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  >
    <Component
      key="0"
    >
      <Styled(Fighter)
        key="0"
      />
    </Component>
    <Component
      key="1"
    >
      <Styled(Fighter)
        key="1"
      />
    </Component>
    <Component
      key="0"
    >
      <Styled(Fighter)
        index={2}
        item={
          Object {
            "id": 0,
            "name": "Item: 0",
          }
        }
        key="0"
        lastIndex={2}
      />
    </Component>
  </PoseGroup>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with three items 1`] = `
<Styled(SegmentGroup)>
  <PoseGroup
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  >
    <Component
      key="0"
    >
      <Styled(Fighter)
        index={0}
        item={
          Object {
            "id": 0,
            "name": "Item: 0",
          }
        }
        key="0"
        lastIndex={2}
      />
    </Component>
    <Component
      key="1"
    >
      <Styled(Fighter)
        index={1}
        item={
          Object {
            "id": 1,
            "name": "Item: 1",
          }
        }
        key="1"
        lastIndex={2}
      />
    </Component>
    <Component
      key="2"
    >
      <Styled(Fighter)
        index={2}
        item={
          Object {
            "id": 2,
            "name": "Item: 2",
          }
        }
        key="2"
        lastIndex={2}
      />
    </Component>
  </PoseGroup>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with two items 1`] = `
<Styled(SegmentGroup)>
  <PoseGroup
    enterPose="enter"
    exitPose="exit"
    flipMove={true}
    preEnterPose="exit"
    singleChildOnly={false}
  >
    <Component
      key="0"
    >
      <Styled(Fighter)
        key="0"
      />
    </Component>
    <Component
      key="0"
    >
      <Styled(Fighter)
        index={1}
        item={
          Object {
            "id": 0,
            "name": "Item: 0",
          }
        }
        key="0"
        lastIndex={2}
      />
    </Component>
    <Component
      key="1"
    >
      <Styled(Fighter)
        index={2}
        item={
          Object {
            "id": 1,
            "name": "Item: 1",
          }
        }
        key="1"
        lastIndex={2}
      />
    </Component>
  </PoseGroup>
</Styled(SegmentGroup)>
`;
